--- a/src/components/header/dls/Btn.module.scss
+++ b/src/components/header/dls/Btn.module.scss
@@ -1,5 +1,5 @@
 .btn {
-  border: 2px var(--coral) solid;
+  border: 2px var(--dim) solid;
   color: white;
   cursor: pointer;
   font-family: var(--font);
@@ -23,7 +23,7 @@
     content: "";
     transition: var(--transition) ease-in-out;
     z-index: -1;
-    background-color: var(--coral);
+    background-color: var(--dim);
     width: 121px;
     height: 0px;
     transform: rotate(70deg) translateY(100px);
@@ -32,7 +32,48 @@
   }
 
   &:hover {
-    color: black;
+    &:before {
+      height: 121px;
+      transform: rotate(0deg) translateY(0px);
+    }
+  }
+}
+
+.btnHero {
+  margin: 5rem 0;
+  border: 2px var(--dim) solid;
+  color: white;
+  cursor: pointer;
+  font-family: var(--font);
+  font-size: 0.8rem;
+  font-weight: bold;
+  // padding: 0.2rem 1.6rem;
+  height: 40px;
+  width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem 3rem;
+  border-radius: 10rem;
+  overflow: hidden;
+  transition-delay: 0.2s;
+  position: relative;
+  isolation: isolate;
+
+  &:before {
+    position: absolute;
+    content: "";
+    transition: var(--transition) ease-in-out;
+    z-index: -1;
+    background-color: var(--dim);
+    width: 200px;
+    height: 0px;
+    transform: rotate(70deg) translateY(100px);
+    left: 0;
+    bottom: 0;
+  }
+
+  &:hover {
     &:before {
       height: 121px;
       transform: rotate(0deg) translateY(0px);
