--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -1,12 +1,30 @@
 .main {
   display: flex;
-  height: 90vh;
   align-items: center;
   justify-content: space-between;
 }
+
+.titleDiv {
+  color: var(--coral-light);
+  h1 {
+    font-family: var(--font);
+    font-size: 3rem;
+    font-weight: bolder;
+    margin: 0;
+    line-height: 6rem;
+  }
+
+  p {
+    color: var(--coral);
+    font-family: sans-serif;
+    word-spacing: 0.1rem;
+    line-height: 1.6rem;
+    white-space: pre-line;
+  }
+}
 .imgHold {
   position: relative;
-  margin: 0 5em 0 0;
+  margin: 2 5em 0 0;
 
   &::before {
     content: "";
