--- a/src/components/header/Navbar.module.scss
+++ b/src/components/header/Navbar.module.scss
@@ -17,7 +17,6 @@
 }
 
 .logo {
-  padding: 5px;
   color: var(--coral);
   display: flex;
   flex-direction: column;
@@ -26,9 +25,24 @@
   align-self: flex-start;
   span {
     display: block;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: bold;
     font-family: sans-serif;
+
+    @include screen.devices(lg) {
+      font-size: 0.8rem;
+    }
+  }
+}
+
+.imgHold {
+  position: relative;
+  width: 50px;
+  height: 20px;
+
+  @include screen.devices(lg) {
+    width: 80px;
+    height: 50px;
   }
 }
 
@@ -37,8 +51,12 @@
 }
 
 .nav {
-  display: flex;
+  display: none;
   gap: 2rem;
+
+  @include screen.devices(lg) {
+    display: flex;
+  }
 }
 
 .server {
@@ -55,5 +73,21 @@
 
   &:hover {
     color: chocolate;
+  }
+}
+
+.menuSvg {
+  display: block;
+  color: var(--coral);
+  width: 30px;
+  height: 30px;
+  transition: var(--transition);
+
+  &:hover {
+    color: chocolate;
+  }
+
+  @include screen.devices(md) {
+    display: none;
   }
 }
