--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -1,30 +1,51 @@
+@use "../../styles/screen";
+
 .main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
+
+  @include screen.devices(lg) {
+    flex-direction: row;
+    margin: 2em 0;
+  }
 }
 
 .titleDiv {
   color: var(--coral-light);
   h1 {
     font-family: var(--font);
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bolder;
     margin: 0;
-    line-height: 6rem;
+    line-height: 3rem;
+
+    @include screen.devices(lg) {
+      font-size: 3rem;
+      line-height: 6rem;
+    }
   }
 
   p {
     color: var(--coral);
     font-family: sans-serif;
-    word-spacing: 0.1rem;
-    line-height: 1.6rem;
     white-space: pre-line;
+    font-size: 0.8rem;
+
+    @include screen.devices(lg) {
+      font-size: 0.9rem;
+      word-spacing: 0.1rem;
+      line-height: 1.6rem;
+    }
   }
 }
 .imgHold {
   position: relative;
   margin: 2 5em 0 0;
+  order: -1;
+  height: 240px;
+  width: 240px;
 
   &::before {
     content: "";
@@ -38,6 +59,13 @@
     width: 300px;
     filter: blur(322px);
     background-color: rgb(131, 79, 1);
+  }
+
+  @include screen.devices(lg) {
+    height: 400px;
+    width: 400px;
+    order: 1;
+    margin: 0 5em 0 0;
   }
 }
 .img {
