--- a/src/components/header/Navbar.module.scss
+++ b/src/components/header/Navbar.module.scss
@@ -8,6 +8,7 @@
 
 .main {
   display: flex;
+  padding: 5px 5px;
   align-items: center;
   justify-content: space-between;
 
@@ -37,8 +38,8 @@
 
 .imgHold {
   position: relative;
-  width: 50px;
-  height: 20px;
+  width: 70px;
+  height: 22px;
 
   @include screen.devices(lg) {
     width: 80px;
@@ -54,7 +55,7 @@
   display: none;
   gap: 2rem;
 
-  @include screen.devices(lg) {
+  @include screen.devices(md) {
     display: flex;
   }
 }
