--- a/src/components/dls/btn/Btn.module.scss
+++ b/src/components/dls/btn/Btn.module.scss
@@ -1,5 +1,5 @@
 @use "../../../styles/screen";
-.btn {
+.btnNav {
   border: 2px var(--dim) solid;
   color: white;
   cursor: pointer;
@@ -82,6 +82,48 @@
   &:hover {
     &:before {
       height: 131px;
+      transform: rotate(0deg) translateY(0px);
+    }
+  }
+}
+
+.btnSidebar {
+  border: 2px var(--dim) solid;
+  color: white;
+  cursor: pointer;
+  font-family: var(--font);
+  font-size: 0.8rem;
+  font-weight: 500;
+  padding: 0.4rem 2rem;
+  margin: 1em 0;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10rem;
+  overflow: hidden;
+  transition-delay: 0.2s;
+  position: relative;
+  isolation: isolate;
+
+  &:before {
+    position: absolute;
+    content: "";
+    transition: var(--transition) ease-in-out;
+    z-index: -1;
+    background-color: var(--dim);
+    width: 121px;
+    height: 0px;
+    transform: rotate(70deg) translateY(100px);
+    left: 0;
+    bottom: 0;
+  }
+
+  &:hover {
+    box-shadow: 0px 0px 60px 20px #462418;
+    &:before {
+      height: 121px;
       transform: rotate(0deg) translateY(0px);
     }
   }
