--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -63,6 +63,7 @@
     right: 0;
     margin: auto;
     bottom: 0;
+    z-index: -1;
     height: 300px;
     width: 300px;
     filter: blur(322px);
