--- a/src/components/dls/card/Featured.module.scss
+++ b/src/components/dls/card/Featured.module.scss
@@ -1,5 +1,5 @@
 .main {
-  border: 6px solid saddlebrown;
+  border: 6px solid var(--dim);
   width: 300px;
   height: 300px;
   color: white;
@@ -20,16 +20,19 @@
 
   &::after {
     content: "";
-    height: 100%;
+    height: 0%;
     width: 100%;
     transition: var(--transition);
     bottom: 0;
-    background-color: rgba(255, 0, 0, 0.116);
+    z-index: -1;
+    background-color: var(--dim);
     position: absolute;
-
-    &:hover {
-      height: 0%;
-      background-color: var(--dim);
+    opacity: 50%;
+  }
+  &:hover {
+    &::after {
+      height: 100%;
+      opacity: 100%;
     }
   }
 }
