--- a/src/components/featured/FeaturedCard.module.scss
+++ b/src/components/featured/FeaturedCard.module.scss
@@ -1,22 +1,22 @@
 @use "../../styles/screen";
 .main {
   margin: 3em 0;
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   gap: 4em 0;
   justify-content: center;
 
   @include screen.devices(sm) {
-    grid-template-columns: 1fr 1fr;
+    // grid-template-columns: repeat(2, auto);
     gap: 2em 0.3em;
   }
 
   @include screen.devices(md) {
     gap: 4em 4em;
-    grid-template-columns: 1fr 1fr;
   }
 
   @include screen.devices(lg) {
     gap: 4em 1em;
-    grid-auto-flow: column;
+    // grid-template-columns: repeat(4, auto);
   }
 }
