--- a/src/components/pricing/Pricing.module.scss
+++ b/src/components/pricing/Pricing.module.scss
@@ -2,9 +2,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 5em 0;
 }
 
 .cardHold {
+  display: flex;
+  gap: 6em;
+  font-family: var(--font);
 }
 .card {
+  color: var(--coral);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid saddlebrown;
+  border-radius: 5px 5px;
+  padding: 0 1em;
+  h3 {
+    background-color: saddlebrown;
+    padding: 0.2em 0.4em;
+    border-radius: 4px 4px;
+  }
+  h1 {
+    margin: 0;
+    font-size: 3rem;
+    span {
+      font-size: 0.9rem;
+    }
+  }
+
+  button {
+    margin: 1em 0;
+    background-color: var(--coral);
+    outline: none;
+    border: none;
+  }
+}
+
+.features {
+  font-size: 0.8rem;
+  text-align: center;
 }
