--- a/src/components/pricing/Pricing.module.scss
+++ b/src/components/pricing/Pricing.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/screen";
+
 .main {
   display: flex;
   flex-direction: column;
@@ -6,28 +8,73 @@
 }
 
 .cardHold {
-  display: flex;
-  gap: 6em;
   font-family: var(--font);
+
+  @include screen.devices(md) {
+    display: flex;
+    gap: 15px;
+  }
 }
 .card {
+  margin: 2em 0;
   color: var(--coral);
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid saddlebrown;
   border-radius: 5px 5px;
   padding: 0 1em;
+  overflow: hidden;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 4px;
+    z-index: -1;
+    background-color: #150a00;
+  }
+
+  &::before {
+    content: "";
+    top: -25%;
+    position: absolute;
+    height: 150%;
+    width: 60%;
+    z-index: -1;
+    background-color: var(--dim);
+    animation: anim 4s linear infinite;
+    border-radius: 3px 3px;
+
+    @keyframes anim {
+      0% {
+        rotate: 0deg;
+      }
+      100% {
+        rotate: 360deg;
+      }
+    }
+  }
+
   h3 {
     background-color: saddlebrown;
     padding: 0.2em 0.4em;
     border-radius: 4px 4px;
+    box-shadow: 0px 0px 30px 10px var(--dim);
   }
   h1 {
     margin: 0;
     font-size: 3rem;
+    position: relative;
+
     span {
       font-size: 0.9rem;
+    }
+
+    .h1Span1 {
+      position: absolute;
+      top: 5px;
+      left: -10px;
+      font-size: 1rem;
     }
   }
 
