--- a/src/components/pricing/Pricing.module.scss
+++ b/src/components/pricing/Pricing.module.scss
@@ -12,18 +12,22 @@
 
   @include screen.devices(md) {
     display: flex;
-    gap: 15px;
+    gap: 0 6em;
+  }
+
+  @include screen.devices(lg) {
+    gap: 0 10em;
   }
 }
 .card {
-  margin: 2em 0;
+  margin: 5em 0;
   color: var(--coral);
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px 5px;
-  padding: 0 1em;
   overflow: hidden;
+  padding: 0 1em;
   position: relative;
 
   &::after {
@@ -42,7 +46,7 @@
     width: 60%;
     z-index: -1;
     background-color: var(--dim);
-    animation: anim 4s linear infinite;
+    animation: anim 15s linear infinite;
     border-radius: 3px 3px;
 
     @keyframes anim {
@@ -59,15 +63,19 @@
     background-color: saddlebrown;
     padding: 0.2em 0.4em;
     border-radius: 4px 4px;
-    box-shadow: 0px 0px 30px 10px var(--dim);
+    box-shadow: 0px 0px 20px 2px var(--dim);
   }
   h1 {
     margin: 0;
-    font-size: 3rem;
     position: relative;
 
     span {
       font-size: 0.9rem;
+    }
+
+    .price {
+      font-size: 2.7rem;
+      text-shadow: 2px 2px 10px rgb(235, 113, 0);
     }
 
     .h1Span1 {
