--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -26,6 +26,11 @@
       font-size: 3rem;
       padding: 0 3em;
     }
+
+    p {
+      background-color: red;
+      color: var(--coral);
+    }
   }
 
   p {
