--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@
   --font: sans-serif;
   --coral: #dab989;
   --coral-light: #f7ede0;
-  --dim: #753304;
+  --dim: #a04d12;
   --shadow: #aa3304;
   --transition: 0.4s;
 }
