--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -15,8 +15,8 @@
 
 .textHold {
   h1 {
+    text-align: center;
     color: var(--coral);
-    word-wrap: normal;
     text-shadow: 1px 1px 402px rgb(255, 1, 1);
 
     @include screen.devices(sm) {
@@ -24,6 +24,7 @@
     }
 
     @include screen.devices(md) {
+      text-align: left;
       font-size: 2rem;
     }
 
@@ -38,6 +39,7 @@
   }
 
   p {
+    text-align: center;
     color: var(--dim);
     font-weight: bold;
     text-shadow: 1px 1px 402px #a00;
@@ -48,6 +50,7 @@
     }
 
     @include screen.devices(md) {
+      text-align: left;
       font-size: 1.3rem;
       padding: 0;
     }
@@ -60,15 +63,19 @@
 }
 
 .imgCard {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
 }
 
 .imgHold {
   position: relative;
   display: block;
-  height: 100%;
-  width: 100%;
+  height: 70%;
+  width: 70%;
   overflow: hidden;
-
+  align-self: center;
   .img {
     object-fit: contain;
   }
