--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -4,20 +4,26 @@
   font-family: var(--font);
   color: var(--coral);
 
-  @include screen.devices(md) {
-    padding: 0 30px;
-  }
+  // @include screen.devices(md) {
+  //   padding: 0 30px;
+  // }
 
-  @include screen.devices(lg) {
-    padding: 0 50px;
-  }
+  // @include screen.devices(lg) {
+  //   padding: 0 50px;
+  // }
 }
 
 .footerHold {
   justify-content: space-between;
+  border-top: 1px solid #4a322f;
 
   @include screen.devices(md) {
     display: flex;
+    padding: 0 30px;
+  }
+
+  @include screen.devices(lg) {
+    padding: 40px 50px 0 50px;
   }
 
   .nameAndDesc {
@@ -48,6 +54,7 @@
 
 .copyRight {
   text-align: center;
-  margin: 0.2em 0;
+  padding: 0.6em 0;
   font-size: 0.8rem;
+  background: var(--dim);
 }
