--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,12 @@ html {
   scroll-behavior: smooth;
 }
 
+.slick-arrow {
+  color: transparent;
+  background: transparent;
+  border: none;
+}
+
 body {
   margin: 0;
   background: #150a00;
