--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -11,9 +11,12 @@
   }
 }
 .flexCont {
+  display: flex;
+  flex-direction: column;
   @include screen.devices(md) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+    flex-direction: row;
     margin: 2em 0 0 0;
   }
 }
@@ -67,6 +70,7 @@
 }
 
 .imgCard {
+  order: -1;
   width: 100%;
   height: 300px;
   display: flex;
@@ -74,6 +78,7 @@
 
   @include screen.devices(md) {
     justify-content: right;
+    order: 1;
   }
   &::before {
     content: "";
