--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -110,15 +110,30 @@
 }
 
 .ask {
-  width: 50%;
+  width: 100%;
   color: var(--coral);
   align-self: baseline;
+
+  @include screen.devices(md) {
+    width: 50%;
+  }
 
   h4 {
     cursor: pointer;
   }
 
   p {
+    animation: anime 0.1s linear;
+    overflow: hidden;
+
+    @keyframes anime {
+      0% {
+        height: 22px;
+      }
+      100% {
+        height: 100px;
+      }
+    }
   }
 }
 
@@ -126,8 +141,8 @@
   cursor: pointer;
   display: flex;
   justify-content: space-evenly;
-  background: var(--dim);
-
+  border: 2px solid chocolate;
+  margin: 0.7em 0;
   span {
     text-align: center;
     font-size: 3rem;
