--- a/src/components/pricing/Pricing.module.scss
+++ b/src/components/pricing/Pricing.module.scss
@@ -91,6 +91,7 @@
     height: 150%;
     width: 60%;
     z-index: -1;
+    will-change: rotate;
     background-color: var(--dim);
     animation: anim 15s linear infinite;
     border-radius: 3px 3px;
