--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -42,8 +42,10 @@
   right: 0;
   border: 4px solid #571708;
   font-weight: 900;
-  border-radius: 15px 9px;
+  border-top-left-radius: 15px;
+  transition: var(--transition);
 
   &:hover {
+    scale: 1.2;
   }
 }
