--- a/src/components/ourBlog/OurBlog.module.scss
+++ b/src/components/ourBlog/OurBlog.module.scss
@@ -6,8 +6,21 @@
 
   h1 {
     color: var(--coral);
-    font-size: 2.9rem;
+    word-wrap: normal;
     text-align: center;
+    text-shadow: 1px 1px 402px rgb(255, 1, 1);
+
+    @include screen.devices(sm) {
+      font-size: 2rem;
+    }
+
+    @include screen.devices(md) {
+      font-size: 2.9rem;
+    }
+
+    @include screen.devices(lg) {
+      font-size: 3rem;
+    }
   }
 }
 
