--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -118,3 +118,74 @@
     font-size: 0.8rem;
   }
 }
+
+.sec {
+  display: grid;
+  gap: 1em 0;
+  grid-template-columns: 1fr;
+
+  @include screen.devices(md) {
+    grid-template-columns: 1fr 1fr;
+    gap: 0 2em;
+  }
+
+  .mapHold {
+  }
+
+  .formHold {
+    height: 100%;
+  }
+}
+
+.form {
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+  height: 100%;
+
+  input {
+    padding: 0.5em;
+    color: white;
+    background: transparent;
+    border: 2px solid var(--dim);
+    border-radius: 5px 5px;
+
+    &::placeholder {
+      color: var(--coral);
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  div {
+    display: flex;
+    gap: 1em;
+  }
+
+  .iSubject {
+    width: 100%;
+  }
+}
+
+.textA {
+  color: white;
+  padding: 0.5em;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: 2px solid var(--dim);
+  border-radius: 5px 5px;
+
+  &::placeholder {
+    color: var(--coral);
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
