--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -151,6 +151,7 @@
     background: transparent;
     border: 2px solid var(--dim);
     border-radius: 5px 5px;
+    width: 100%;
 
     &::placeholder {
       color: var(--coral);
