--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -58,3 +58,27 @@
   font-size: 0.8rem;
   background: var(--dim);
 }
+
+.contSect {
+  h3 {
+    text-align: center;
+  }
+  div {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    p {
+      font-size: 0.8rem;
+    }
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+  }
+}
