--- a/src/components/ourBlog/OurBlog.module.scss
+++ b/src/components/ourBlog/OurBlog.module.scss
@@ -30,7 +30,7 @@
   justify-content: center;
   gap: 3em 0;
   @include screen.devices(sm) {
-    justify-content: space-between;
+    gap: 2em;
   }
 }
 
