--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,12 +1,12 @@
-:root {
-  --font: sans-serif;
-  --coral: #dab989;
-  --coral-light: #f7ede0;
-  --dim: #a04d12;
-  --shadow: #aa3304;
-  --shadow-dim: #150a00;
-  --transition: 0.4s;
-}
+// :root {
+//   --font: sans-serif;
+//   --coral: #dab989;
+//   --coral-light: #f7ede0;
+//   --dim: #a04d12;
+//   --shadow: #aa3304;
+//   --shadow-dim: #150a00;
+//   --transition: 0.4s;
+// }
 
 html {
   scroll-behavior: smooth;
@@ -19,8 +19,37 @@ html {
 }
 
 body {
+  --font: sans-serif;
+  --coral: #dab989;
+  --coral-light: #f7ede0;
+  --dim: #a04d12;
+  --shadow: #aa3304;
+  --shadow-dim: #150a00;
+  --transition: 0.4s;
+  --background: #150a00;
+
   margin: 0;
-  background: #150a00;
+  background: var(--background);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--shadow-dim);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--dim);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--shadow);
 }
 
 a {
@@ -40,4 +69,12 @@ a {
   width: 100%;
   height: 300px;
   position: relative;
+}
+.shadow {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 4;
+  width: 100%;
+  background: rgba(159, 53, 11, 0.24);
 }
