--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap");
 // :root {
+//   --font-jakarta: "Plus Jakarta Sans", sans-serif;
 //   --font: sans-serif;
 //   --coral: #dab989;
 //   --coral-light: #f7ede0;
@@ -19,6 +21,7 @@ html {
 }
 
 body {
+  --font-jakarta: "Plus Jakarta Sans", sans-serif;
   --font: sans-serif;
   --coral: #dab989;
   --coral-light: #f7ede0;
