--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,6 +30,7 @@ body {
   --shadow-dim: #150a00;
   --transition: 0.4s;
   --background: #150a00;
+  --frame: #000000;
 
   margin: 0;
   background: var(--background);
