--- a/src/components/dls/card/Featured.module.scss
+++ b/src/components/dls/card/Featured.module.scss
@@ -1,19 +1,54 @@
 @use "../../../styles/screen";
 
 .main {
-  border: 6px solid var(--dim);
+  // border: 6px solid var(--dim);
   width: 300px;
   height: 300px;
   color: white;
   border-radius: 5%;
   position: relative;
+  inset: 1em;
+
+  .topBox {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 30%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: var(--frame);
+  }
+
+  .bottomBox {
+    transition: var(--transition);
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 30%;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background-color: var(--frame);
+  }
+
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   min-height: 100%;
+  //   min-width: 100%;
+  //   background-color: royalblue;
+  //   top: 0;
+  //   inset: 10px;
+  //   opacity: 100%;
+  // }
 
   &::before {
     content: "";
     position: absolute;
     height: 120%;
     width: 120%;
-    z-index: -1;
+    z-index: -2;
     background-color: rgb(74, 9, 9);
     left: -30px;
     top: -30px;
@@ -34,26 +69,23 @@
 
   p {
     color: var(--coral);
-    margin: 2em 1em;
+    margin: 2em 2em;
     font-size: 0.9em;
     font-family: var(--font);
   }
 
   &::after {
     content: "";
-    height: 0%;
-    width: 100%;
     transition: var(--transition);
-    bottom: 0;
     z-index: -1;
-    background-color: var(--dim);
     position: absolute;
-    opacity: 50%;
+    background-color: #1c0700;
+    inset: 10px;
   }
   &:hover {
-    &::after {
-      height: 100%;
-      opacity: 100%;
+    .bottomBox {
+      width: 100%;
+      background-color: var(--dim);
     }
   }
 }
