--- a/src/components/featured/FeaturedCard.module.scss
+++ b/src/components/featured/FeaturedCard.module.scss
@@ -13,6 +13,18 @@
 
   @include screen.devices(md) {
     gap: 4em 4em;
+    .card:nth-child(1) {
+      transition-delay: 0.5s;
+    }
+    .card:nth-child(2) {
+      transition-delay: 0.4s;
+    }
+    .card:nth-child(3) {
+      transition-delay: 0.3s;
+    }
+    .card:nth-child(4) {
+      transition-delay: 0.2s;
+    }
   }
 
   @include screen.devices(lg) {
@@ -20,15 +32,14 @@
     // grid-template-columns: repeat(4, auto);
   }
 }
-
 .card {
   width: 300px;
   height: 300px;
   color: white;
+  transition: 1s;
   border-radius: 5%;
   position: relative;
   inset: 1em;
-  transition: 1s;
   opacity: 0;
   transform: translateX(100px);
 
