--- a/src/components/featured/FeaturedCard.module.scss
+++ b/src/components/featured/FeaturedCard.module.scss
@@ -5,9 +5,10 @@
   flex-wrap: wrap;
   gap: 4em 0;
   justify-content: center;
+  align-items: center;
+  padding-right: 30px;
 
   @include screen.devices(sm) {
-    // grid-template-columns: repeat(2, auto);
     gap: 2em 0.3em;
   }
 
@@ -29,7 +30,6 @@
 
   @include screen.devices(lg) {
     gap: 4em 1em;
-    // grid-template-columns: repeat(4, auto);
   }
 }
 .card {
