--- a/src/components/featured/FeaturedCard.module.scss
+++ b/src/components/featured/FeaturedCard.module.scss
@@ -37,6 +37,7 @@
   height: 300px;
   color: white;
   transition: 1s;
+  border-radius: 5%;
   position: relative;
   inset: 1em;
   will-change: translate;
