--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -70,11 +70,11 @@
 }
 
 .iconNh2 {
-  background: rgb(62, 21, 17);
+  background: rgb(28, 9, 7);
   padding: 25px 20px;
 
   color: var(--coral);
-  border-radius: 15px 15px;
+  border-radius: 10px;
   display: grid;
   min-width: 200px;
   justify-items: center;
@@ -181,7 +181,7 @@
   padding: 0.5em;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 130px;
   background: transparent;
   border: 2px solid var(--dim);
   border-radius: 5px 5px;
