--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -42,7 +42,12 @@
   transition: var(--transition);
   border-right-style: none;
   border-bottom-style: none;
+  box-shadow: 2px 2px 42px 4px var(--dim);
 
+  &__svg {
+    height: 1.5em;
+    width: 1.5em;
+  }
   &:hover {
     scale: 1.2;
   }
