--- a/src/components/featured/FeaturedCard.module.scss
+++ b/src/components/featured/FeaturedCard.module.scss
@@ -14,18 +14,6 @@
 
   @include screen.devices(md) {
     gap: 4em 4em;
-    .card:nth-child(1) {
-      transition-delay: 0.5s;
-    }
-    .card:nth-child(2) {
-      transition-delay: 0.4s;
-    }
-    .card:nth-child(3) {
-      transition-delay: 0.3s;
-    }
-    .card:nth-child(4) {
-      transition-delay: 0.2s;
-    }
   }
 
   @include screen.devices(lg) {
@@ -36,6 +24,7 @@
   width: 300px;
   height: 300px;
   color: white;
+  transition-property: translate;
   transition: 1s;
   border-radius: 5%;
   position: relative;
