--- a/src/components/pricing/Pricing.module.scss
+++ b/src/components/pricing/Pricing.module.scss
@@ -75,6 +75,7 @@
   overflow: hidden;
   padding: 0 1em;
   position: relative;
+  outline: 2px solid var(--shadow);
 
   &::after {
     content: "";
@@ -92,7 +93,7 @@
     width: 60%;
     z-index: -1;
     will-change: rotate;
-    background-color: var(--dim);
+    background-color: var(--shadow);
     animation: anim 15s linear infinite;
     border-radius: 3px 3px;
 
@@ -107,10 +108,10 @@
   }
 
   h3 {
-    background-color: saddlebrown;
+    background-color: var(--shadow);
     padding: 0.2em 0.4em;
     border-radius: 4px 4px;
-    box-shadow: 0px 0px 20px 2px var(--dim);
+    box-shadow: 0 0 20px 2px var(--shadow);
   }
   h1 {
     margin: 0;
@@ -122,7 +123,7 @@
 
     .price {
       font-size: 2.7rem;
-      text-shadow: 2px 2px 10px rgb(235, 113, 0);
+      text-shadow: 2px 2px 10px var(--shadow);
     }
 
     .h1Span1 {
